--- a/.config/i3/config
+++ b/.config/i3/config
@@ -214,7 +214,7 @@ for_window [class="^.*"] border pixel 0
 gaps inner 10
 gaps outer 10
 exec_always --no-startup-id /usr/bin/nm-applet
-exec --no-startup-id /usr/bin/feh --bg-scale ~/Pictures/curl24k.png
+exec --no-startup-id /usr/bin/feh --bg-scale ~/Pictures/mountain.png
 
 exec --no-startup-id i3-msg 'workspace 1; exec /usr/bin/gnome-terminal'
 exec --no-startup-id i3-msg 'workspace 2; exec /usr/bin/chromium-browser'
