--- a/.config/i3/config
+++ b/.config/i3/config
@@ -33,7 +33,7 @@ floating_modifier $mod
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec dmenu_run -b -fn 'Pragmata Pro Mono:regular:pixelsize=35'
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -147,26 +147,8 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
 bar {
-        height 45
-        position top
-        status_command i3status -c ~/.config/i3/i3status.config | ~/.config/i3/wrapper.py 2>/tmp/i3log.err
-        #i3bar_command /usr/bin/i3bar
-        # tray_output primary
-        workspace_buttons yes
-        verbose true
-        colors {
-                # class                 border  backgr. text
-                #separator              #444444
-                #background             #222222
-                #statusline             #B1B1B1
-                focused_workspace       #000000 #000000 #FFFFFF
-                active_workspace        #555555 #333333 #888888
-                inactive_workspace      #000000 #000000 #666666
-                #urgent_workspace       #eb709b #eb709b #ffffff
-        }
+    i3bar_command ~/.config/polybar/launch.sh
 }
 
 # start a terminal
@@ -218,6 +200,11 @@ exec --no-startup-id /usr/bin/feh --bg-scale ~/Pictures/mountain.png
 
 exec --no-startup-id i3-msg 'workspace 1; exec /usr/bin/gnome-terminal'
 exec --no-startup-id i3-msg 'workspace 2; exec /usr/bin/chromium-browser'
+exec --no-startup-id i3-msg 'workspace 3; exec /usr/bin/code'
+
+assign [class="^gnome-terminal"] 1
+assign [class="^- Chromium"] 2
+assign [class="Visual Studio Code"] 3
 
 exec --no-startup-id compton --config ~/.config/compton.conf
 
@@ -225,5 +212,4 @@ exec --no-startup-id devilspie ~/.config/devilspie/*.ds
 
 exec numlockx on
 
-assign [class="^gnome-terminal"] 1
-assign [class="^- Chromium"] 2
+
