--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@
 !.config/i3*
 !.config/polybar*
 !.config/gtk-3.0*
-!.config/compton.conf!
+!.config/compton.conf
 !.config/devilspie*
 !.config/Code/User/settings.json
