--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -144,7 +144,7 @@ interval = 5
 
 [module/wireless-network]
 type = internal/network
-interface = wlp61s0
+interface = ${env:DEFAULT_NETWORK_INTERFACE:wlp2s0}
 interval = 3.0
 format-connected-underline = ${colors.Orange}
 format-disconnected-underline = ${colors.Orange}
