--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -10,5 +10,6 @@
     "editor.fontFamily": "Dank Mono",
     "editor.fontSize": 16,
     "window.titleBarStyle": "native",
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "editor.minimap.enabled": false
 }
